; ModuleID = '/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_sdb.c_nextcas.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_sdb.c_nextcas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nextcas.cas = internal global i32 1, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @nextcas to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nextcas() #0 {
  %1 = load i32, i32* @nextcas.cas, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %6, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @nextcas.cas, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @nextcas.cas, align 4
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @nextcas.cas, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @nextcas.cas, align 4
  ret i32 %7
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
